--- a/app/сurrency_сonverter/templates/сurrency_сonverter/index.html
+++ b/app/сurrency_сonverter/templates/сurrency_сonverter/index.html
@@ -3,50 +3,53 @@
 {% block title %}					
 Валюта
 {% endblock %}
-					
-{% block content %}					
-	<h2>сurrency_сonverter</h2>
-	<br>				
-	<div class="form-style">				
+
+{% block header %}
+<h2>сurrency_сonverter</h2>
+{% endblock %}
+
+{% block content %}
+	<div class="form-style">
 		<form method="POST">
 			{% csrf_token %}
-			<label for="">Количество монет</label>
-			<br>
-			<input type="text" name="amount">
-			<br>
-			<div>
-				<div>
+			<div class="input_box">
+				<span class="sp">Количество монет</span>
+				<input type="text" name="amount" required="required">
+
+			</div>
+			<div class="row-2">
+				<div class="from">
 					<label for="">Из валюты</label><br>
-					<select name="from_curr">
+					<select name="from_curr" value="{{from_cur}}">
 						{% for from_curr in currency_codes %}
-						<option value='{{from_curr}}'>
+						<option value='{{from_curr}}' {% if from_cur == from_curr %}selected{% endif %}>
 							{{from_curr}}
 						</option>{% endfor %}
 					</select>
 				</div>
-				<div>
+				<div class="to">
 					<label for="">В валюту</label><br>
-					<select name="to_curr">
+					<select name="to_curr" value="{{to_cur}}>
 						{% for to_curr in currency_codes %}
-						<option value="{{to_curr}}">
+						<option value="{{to_curr}}" {% if to_cur == to_curr %}selected{% endif %}>
 							{{to_curr}}
 						</option>{% endfor %}
 					</select>
 				</div>
 			</div>
-			<br>		
-			<div>		
+
+			<div class="from">
 				<button type="submit">Отправить</button>	
 			</div>
-			<br>
-			<div>
+
+			<div class="to">
 				{% if convert_amount %}
 					<div>
-						<p>Отдаем <b>{{from_cur}}</b></p>
-						<p>Получаем <b>{{to_cur}}</b></p>
+						<p>Вы отдаете  <b> {{amount}} {{from_c}}</b></p>
+						<p>Вы получаете  <b> {{convert_amount}} {{to_c}}</b></p>
 					</div>
 					<div>
-						{{convert_amount}}
+
 					</div>
 				{% endif %}
 			</div>
