--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -1,5 +1,5 @@
 header {
-  display: block
+  max-width: 350px;
 }
 .header {
   display: flex;
@@ -7,10 +7,12 @@ header {
   height: 100%;
   weight: 40px;
   background: black;
+  max-width: 350px;
+    margin: 0 auto;
 }
 .container {
   background-color: #eee;
-  max-width: 800px;
+  max-width: 350px;
   margin: 0 auto;
 }
 .row {
@@ -42,7 +44,7 @@ h2 {
   height: 100%;
   width: 100%;
 }
-.from, .to, .input_curr, .input_box{
+.from, .to, .input_curr, .input_box {
   width: 100%;
   margin: 10px 0;
   padding: 0 10px 0 0px;
@@ -67,36 +69,35 @@ h2 {
     outline: none;
     color: #fff;
     font-size: 1em;
-
+    text-align: center;
+    transition: 0.5s;
 }
 
-.input_box span{
+.sp{
     position: absolute;
-    left: 100;
-    padding: 10px;
+    left: 50px;
+    top: 0px;
+    padding: 10px 10px;
     pointer-events: none;
     font-size: 1em;
     color: rgba(255,255,255,0.25);
     text-transform: uppercase;
-    transition: 0.5s;
 
 }
+.sp:hover {
+    left: 100px;
+    top: 100px;
+    }
 
-
-.input_box input:focus::-.sp
+.input:focus ~ .sp
 {
     color: #00dfc4;
     transform: translateX(10px) translateY(-7px);
     font-size: 0.65em;
-
 }
 select {
-
-
-
     width: 100%;
     padding: 10px 0 10px 0;
-
     border-radius: 5px;
     border: 1px solid rgba(255, 255,255,0.25);
     background: #1d2b3a;
@@ -108,7 +109,7 @@ button {
     margin: 0 auto;
     width: 100%;
     max-width: 290px;
-        width: 100%;
+    width: 100%;
     padding: 10px 0;
     max-width: 290px;
     border-radius: 5px;
@@ -117,6 +118,9 @@ button {
     outline: none;
     color: #fff;
     font-size: 1em;
+}
+button:hover {
+    background-color: bisque;
 }
 label, p {
     color: #fff;
